--- a/GoodMood_BackEnd/requirements.txt
+++ b/GoodMood_BackEnd/requirements.txt
@@ -3,3 +3,10 @@ Django==5.1.7
 djangorestframework==3.15.2
 sqlparse==0.5.3
 tzdata==2025.1
+djangorestframework_simplejwt==5.5.0
+PyJWT==2.9.0
+
+
+
+
+
